tests/error/label_redefinition.c
// fail "Redefinition of label 'a'."


int main(){
    a:
    a:
    return 0;
}
